Restructured the cloprand directories and files.

--- a/resources/public/core/controls/Toolbar/Toolbar.html
+++ b/resources/public/core/controls/Toolbar/Toolbar.html
@@ -1,5 +1,5 @@
 <ul class="ui-widget ui-helper-clearfix toolbar">
-{{for actions}}
+{{for items}}
   <li class="ui-state-default ui-corner-all" title="{{:description}}">
     <span class="ui-icon {{:icon_name}}"></span><span class="caption">{{:caption}}</span>
   </li>
