--- a/resources/public/core/index.html
+++ b/resources/public/core/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="content-script-type" content="text/javascript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cloprand</title>
-    <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.11.4/jquery-ui.min.css'></link>
-    <link rel='stylesheet' type='text/css' href='/lib/jquery.splitter/css/jquery.splitter.css'></link>
-    <link rel='stylesheet' type='text/css' href='/core/Main.css'></link>
+    <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.11.4/jquery-ui.min.css' />
+    <link rel='stylesheet' type='text/css' href='/lib/jquery.splitter/css/jquery.splitter.css' />
+    <link rel='stylesheet' type='text/css' href='/core/Main.css' />
     <script data-main="/core/app.js?version=0.0.12" src="/lib/require.js"></script>
   </head>
   <body>
