Modified 'application.html' style attribute to display correctlly in IE11.

--- a/resources/public/defaults/application.html
+++ b/resources/public/defaults/application.html
@@ -1,4 +1,4 @@
-<div id="application-panel">
+<div id="application-panel" style="position: static;">
   <div id="object-list-view">
     <div id="object-operations"></div>
     <div id="object-list">
