Added the function to change toolbar buttons visible.

--- a/resources/public/controls/Toolbar/Toolbar.html
+++ b/resources/public/controls/Toolbar/Toolbar.html
@@ -1,6 +1,6 @@
 <ul class="ui-widget ui-helper-clearfix toolbar">
 {{for items}}
-  <li class="ui-state-default ui-corner-all" title="{{:description}}">
+  <li class="ui-state-default ui-corner-all {{:name}}" title="{{:description}}">
     <span class="ui-icon {{:icon_name}}"></span><span class="caption">{{:caption}}</span>
   </li>
 {{/for}}
