--- a/resources/public/controls/fields/DropDownList/DropDownList.html
+++ b/resources/public/controls/fields/DropDownList/DropDownList.html
@@ -1,5 +1,6 @@
-<select name="{{:name}}" datatype="{{:datatype}}">
+<select name="{{:name}}">
 {{for items}}
-  <option value="{{:value}}">{{:label}}</option>
+  <option value="{{:uuid}}">{{:label}}</option>
 {{/for}}
 </select>
+<div></div>
