--- a/resources/public/controls/fields/Boolean/Boolean.html
+++ b/resources/public/controls/fields/Boolean/Boolean.html
@@ -1,1 +1,2 @@
-<input type="checkbox" name="{{:name}}" value="">
+<div class="editor"><label><input type="checkbox" name="{{:name}}" /> {{:description}}<label></div>
+<div class="renderer"><input type="checkbox" name="{{:name}}" onclick="return false;" /> {{:description}}</div>
