--- a/resources/public/core/index.html
+++ b/resources/public/core/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="content-style-type" content="text/css" />
     <meta http-equiv="content-script-type" content="text/javascript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tames</title>
+    <title></title>
     <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.11.4/jquery-ui.min.css' />
     <link rel='stylesheet' type='text/css' href='/lib/jquery.splitter/css/jquery.splitter.css' />
-    <link rel='stylesheet' type='text/css' href='/core/Main.css' />
-    <script data-main="/core/app.js?version=0.0.13" src="/lib/require.js"></script>
+    <link rel='stylesheet' type='text/css' href='/core/main.css' />
+    <script data-main="/core/main.js?version=0.0.15" src="/lib/require.js"></script>
   </head>
   <body>
   </body>
