Fixed some bugs.

--- a/resources/public/controls/fields/DropDownList/DropDownList.html
+++ b/resources/public/controls/fields/DropDownList/DropDownList.html
@@ -1,6 +1,6 @@
 <select name="{{:name}}">
 {{for items}}
-  <option value="{{:uuid}}">{{:label}}</option>
+  <option value="{{:value}}">{{:caption}}</option>
 {{/for}}
 </select>
 <div></div>
