Modified that Primitive class is added a UUID field.

--- a/resources/public/controls/fields/File/File.html
+++ b/resources/public/controls/fields/File/File.html
@@ -1,1 +1,3 @@
-<input type="file" name="{{:name}}" value="">
+<input class="editor" name="{{:name}}"></input>
+<a class="viewer" href="{{:url}}">{{:file_name}}</a>
+
