Added extension function.

--- a/resources/public/controls/Grid/Grid.html
+++ b/resources/public/controls/Grid/Grid.html
@@ -1,11 +1,4 @@
 <table class='grid'>
-  <thead>
-    <tr>
-    {{for columns}}
-      <th><div>{{:label}}</div></th>
-    {{/for}}
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
+  <thead></thead>
+  <tbody></tbody>
 </table>
