Modified the system using UUID field.

--- a/resources/public/controls/fields/List/List.html
+++ b/resources/public/controls/fields/List/List.html
@@ -1,7 +1,7 @@
 <div class="editor">
   <select name="{{:name}}" multiple size="10">
   {{for items}}
-    <option value="{{:uuid}}">{{:label}}</option>
+    <option value="{{:id}}">{{:label}}</option>
   {{/for}}
   </select>
 </div>
