--- a/resources/public/defaults/App.html
+++ b/resources/public/defaults/App.html
@@ -3,6 +3,10 @@
     <span id="title"></span>
     <span style="display:inline-block; width:30px;"></span>
     <span id="sub-title"></span>
+    <form method="get" action="/logout" style="display:inline-block;position:absolute; right:0px;">
+      <span id="user_name"></span>
+      <input type="submit" value="Logout" />
+    </form>
   </div>
   <div id="contents-panel"></div>
 </div>
