Added the tree structure as file type storage.

--- a/resources/public/defaults/App.html
+++ b/resources/public/defaults/App.html
@@ -1,6 +1,6 @@
 <div id="root-panel">
   <div id="header-panel" style="height: 30px;">
-    <span id="title"></span>
+    <span id="title" style="font-size:20px;"></span>
     <span style="display:inline-block; width:30px;"></span>
     <span id="sub-title"></span>
     <form method="get" action="/logout" style="display:inline-block;position:absolute; right:0px;">
