Moved resources/public/core -> resources/public/data/Core.

--- a/resources/public/data/Core/tames.html
+++ b/resources/public/data/Core/tames.html
@@ -8,8 +8,8 @@
     <title></title>
     <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.11.4/jquery-ui.min.css' />
     <link rel='stylesheet' type='text/css' href='/lib/jquery.splitter/css/jquery.splitter.css' />
-    <link rel='stylesheet' type='text/css' href='/core/main.css' />
-    <script data-main="/core/main.js?version=0.0.15" src="/lib/require.js"></script>
+    <link rel='stylesheet' type='text/css' href='/data/Core/main.css' />
+    <script data-main="/data/Core/main.js?version=0.0.15" src="/lib/require.js"></script>
   </head>
   <body>
   </body>
