--- a/resources/public/data/Core/tames.html
+++ b/resources/public/data/Core/tames.html
@@ -6,6 +6,7 @@
     <meta http-equiv="content-script-type" content="text/javascript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="shortcut icon" href="/data/Core/tames16.ico" />
     <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.11.4/jquery-ui.min.css' />
     <link rel='stylesheet' type='text/css' href='/lib/jquery.splitter/css/jquery.splitter.css' />
     <link rel='stylesheet' type='text/css' href='/data/Core/main.css' />
