--- a/resources/public/data/Core/tames.html
+++ b/resources/public/data/Core/tames.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="shortcut icon" href="/data/Core/tames.ico" />
+    <link rel='stylesheet' type='text/css' href='/lib/w2ui.1.3/w2ui-1.3.min.css' />
     <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.11.4/jquery-ui.min.css' />
     <link rel='stylesheet' type='text/css' href='/data/Core/main.css' />
     <script data-main="/data/Core/main.js?version=0.0.15" src="/lib/require.js"></script>
