Corresponded some views & controls to w2ui library.

--- a/resources/public/data/Core/tames.html
+++ b/resources/public/data/Core/tames.html
@@ -8,6 +8,7 @@
     <title></title>
     <link rel="shortcut icon" href="/data/Core/tames.ico" />
     <link rel='stylesheet' type='text/css' href='/lib/w2ui-1.4.3/w2ui-1.4.3.min.css' />
+    <link rel='stylesheet' type='text/css' href='/lib/font-awesome-4.6.1/css/font-awesome.css' />
     <link rel='stylesheet' type='text/css' href='/data/Core/main.css' />
     <script data-main="/data/Core/main.js?version=0.0.15" src="/lib/require.js"></script>
   </head>
