Modified System class & config.json (instance of System). Added logo SVG, favicon icon file to .config folder. Modified to refer the image files.

--- a/resources/public/data/Core/tames.html
+++ b/resources/public/data/Core/tames.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-script-type" content="text/javascript" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="shortcut icon" href="/data/Core/tames.ico" />
+    <link rel="shortcut icon" href="/image/System/config/favicon/tames.ico" />
     <link rel='stylesheet' type='text/css' href='/lib/w2ui-1.4.3/w2ui-1.4.3.min.css' />
     <link rel='stylesheet' type='text/css' href='/lib/font-awesome-4.6.1/css/font-awesome.css' />
     <link rel='stylesheet' type='text/css' href='/data/Core/main.css' />
