--- a/resources/public/core/tames.html
+++ b/resources/public/core/tames.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="shortcut icon" href="" />
-    <link rel='stylesheet' type='text/css' href='/lib/w2ui-1.4.3/w2ui-1.4.3.min.css' />
+    <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.12.1.css' />
+    <link rel='stylesheet' type='text/css' href='/lib/w2ui-1.4.3/w2ui-1.4.3.css' />
     <link rel='stylesheet' type='text/css' href='/lib/font-awesome-4.6.1/css/font-awesome.css' />
     <link rel='stylesheet' type='text/css' href='/core/main.css' />
     <script data-main="/core/main.js?version=0.0.15" src="/lib/require.js"></script>
