--- a/resources/public/core/tames.html
+++ b/resources/public/core/tames.html
@@ -10,6 +10,7 @@
     <link rel='stylesheet' type='text/css' href='/lib/jquery-ui-1.12.1.css' />
     <link rel='stylesheet' type='text/css' href='/lib/w2ui/w2ui-1.5.rc1.css' />
     <link rel='stylesheet' type='text/css' href='/lib/font-awesome-4.6.1/css/font-awesome.css' />
+    <link rel='stylesheet' type='text/css' href='/core/reset-w2ui.css' />
     <link rel='stylesheet' type='text/css' href='/core/main.css' />
     <script data-main="/core/main.js?version=0.0.15" src="/lib/require.js"></script>
   </head>
