--- a/resources/core/login.html
+++ b/resources/core/login.html
@@ -1,6 +1,10 @@
 <div>
   <div style="width:100%; text-align:center;height:50px;"/>
-  <div style="width:100px; height:100px; background-image:url(core/logo.svg); background-size:100%;margin:auto;"/>
+  <!--
+  <div style="width:100px; height:100px; background-image:url(.config/logo/logo-site-01.gif); background-size:100%;margin:auto;"/>
+  <div style="text-align:center;"><img style="" src=".config/logo/logo-site-01.gif"/></div>
+  -->
+  <div style="text-align:center;"><img style="height:100px;" src="core/logo.svg"/></div>
   <h1 style="text-align:center;height:50px;">{{TITLE}}</h1>
   <div id="login-failed-message" style="width:100%; text-align:center;height:50px; color: red"/>
   <form method="post" name="login" action="login">
