--- a/resources/core/login.html
+++ b/resources/core/login.html
@@ -4,16 +4,16 @@
   <div style="width:100px; height:100px; background-image:url(.config/logo/logo-site-01.gif); background-size:100%;margin:auto;"/>
   <div style="text-align:center;"><img style="" src=".config/logo/logo-site-01.gif"/></div>
   -->
-  <div style="text-align:center;"><img style="height:100px;" src="core/logo.svg"/></div>
+  <div style="text-align:center;"><img style="{{LOGO_HEIGHT}}" src="{{LOGO}}"/></div>
   <h1 style="text-align:center;height:50px;">{{TITLE}}</h1>
   <div id="login-failed-message" style="width:100%; text-align:center;height:50px; color: red"/>
   <form method="post" name="login" action="login">
     <div style="width:100%; text-align:center;">
-      <span style="display:inline-block;width:100px;">Login ID</span>
+      <span style="display:inline-block;width:100px;">{{LOGIN_ID_CAPTION}}</span>
       <input id="login-id" type="text" name="login_id" style="width:200px;" class="w2field" tabindex="1"/>
       <br/>
       <div style="width:100%;height:10px;"/>
-      <span style="display:inline-block;width:100px;">Password</span>
+      <span style="display:inline-block;width:100px;">{{PASSWORD_CAPTION}}</span>
       <input id="login-password" type="password" name="password" style="width:200px;" class="w2field" tabindex="2" />
       <br/>
       <div style="width:100%;height:50px;"/>
@@ -21,7 +21,7 @@
       <input type="submit" style="display:none;" />
       <div id="login-button" class="div-button" style="width:70px;height:70px;margin: auto;" tabindex="3">
         <i class="fa fa-sign-in" style="font-size:35pt;" />
-        <div style="font-size:10pt;">Login</div>
+        <div style="font-size:10pt;">{{BUTTON_CAPTION}}</div>
       </div>
     </div>
   </form>
